Wed Aug 16 13:04:48 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/net.c: cleanup, fix possible problem under Linux
	* src/tds/read.c: avoid invalid in_pos value on tds_peek

Mon Aug 14 19:12:58 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/blk.c src/dblib/bcp.c src/dblib/dblib.c:
	* src/dblib/unittests/common.c:
	- fix warnings compiling with SUN cc
	* src/dblib/unittests/thread.c: make error more verbose

Sun Aug 13 15:02:40 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c src/odbc/unittests/data.c:
	* src/odbc/unittests/transaction.c:
	- fix minor issues with 64-bit machines

Thu Aug 10 10:10:30 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/ct.c: fix possible buffer overflow
	* src/replacements/gettimeofday.c: add comment
	* src/tds/threadsafe.c: better and simple win implementation
	* vms/descrip_mms.template win32/config.h:
	* win32/dev-cpp/FreeTDS.dev win32/msvc6/libTDS.dsp:
	- update build file

Tue Aug 08 19:14:32 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* doc/htdoc/index.html: update link
	* src/tds/query.c: add comment

Tue Aug 08 16:42:39 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/query.c src/tds/util.c:
	- fix timeout problem setting correctly query_start_time

Tue Aug 08 14:43:50 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/Makefile.am:
	* src/odbc/unittests/timeout2.c(added):
	- added a test for timeout problem (cf "Query Time Out" on ML)

Mon Aug 07 21:37:39 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsstring.h src/odbc/odbc_util.c:
	* src/replacements/iconv.c src/tds/challenge.c:
	* src/tds/config.c src/tds/convert.c:
	* src/tds/iconv.c src/tds/mem.c src/tds/net.c:
	* src/tds/query.c src/tds/read.c src/tds/tdsstring.c:
	* src/tds/token.c src/tds/write.c:
	- updated doxygen comments

Sun Aug 06 17:54:11 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>